--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -39,5 +39,5 @@ a:hover {
 
 main {
   position: relative;
-  z-index: 1;
+  z-index: 0;
 }
